Correcciones en el revert

--- a/administrador_de_reparaciones/views/views_tipo_producto.xml
+++ b/administrador_de_reparaciones/views/views_tipo_producto.xml
@@ -28,22 +28,25 @@
     <!--Agregar el campo en la vista de product.product-->
 
         <record model="ir.ui.view" id="product_tree_view">
-        <field name="name">product.tree</field>
-        <field name="model">product.product</field>
-        <field name="inherit_id" ref="product.product_template_tree_view"/>
-        <field name="arch" type="xml">
-            <field name="name" position="after">
-                <field name="tipo_producto"/>
+            <field name="name">product.tree</field>
+            <field name="model">product.product</field>
+            <field name="inherit_id" ref="product.product_template_tree_view"/>
+            <field name="arch" type="xml">
+                <field name="name" position="after">
+                    <field name="tipo_producto"/>
+                </field>
             </field>
         </record>
+
         <record model="ir.ui.view" id="product_form_view">
 
         <field name="name">product.form</field>
         <field name="model">product.product</field>
         <field name="inherit_id" ref="product.product_template_only_form_view"/>
         <field name="arch" type="xml">
-            <field name="name" position="after">
-                <field name="tipo_producto"/>
+                <field name="name" position="after">
+                    <field name="tipo_producto"/>
+                </field>
             </field>
         </record>
 
