--- a/administrador_de_reparaciones/views/views_tipo_producto.xml
+++ b/administrador_de_reparaciones/views/views_tipo_producto.xml
@@ -33,7 +33,7 @@
             <field name="inherit_id" ref="product.product_template_tree_view"/>
             <field name="arch" type="xml">
                 <field name="name" position="after">
-                    <field name="tipo_producto"/>
+                    <field name="tipo_producto_id"/>
                 </field>
             </field>
         </record>
@@ -45,7 +45,7 @@
         <field name="inherit_id" ref="product.product_template_only_form_view"/>
         <field name="arch" type="xml">
                 <field name="name" position="after">
-                    <field name="tipo_producto"/>
+                    <field name="tipo_producto_id"/>
                 </field>
             </field>
         </record>
