--- a/administrador_de_reparaciones/views/views_product.xml
+++ b/administrador_de_reparaciones/views/views_product.xml
@@ -17,7 +17,7 @@
         <field name="model">product.product</field>
         <field name="inherit_id" ref="product.product_template_only_form_view"/>
         <field name="arch" type="xml">
-                <field name="name" position="after">
+                <field name="detailed_type" position="after">
                     <field name="tipo_producto_id"/>
                 </field>
             </field>
