--- a/administrador_de_reparaciones/views/views_product.xml
+++ b/administrador_de_reparaciones/views/views_product.xml
@@ -5,8 +5,10 @@
             <field name="model">product.product</field>
             <field name="inherit_id" ref="product.product_template_tree_view"/>
             <field name="arch" type="xml">
-                <field name="name" position="after">
-                    <field name="tipo_producto_id"/>
+                <field name="detailed_type" position="after">
+                    <field name="tipo_equipo_id"/>
+                    <field name="marca_id"/>
+                    <field name="modelo_id"/>
                 </field>
             </field>
         </record>
@@ -18,7 +20,9 @@
         <field name="inherit_id" ref="product.product_template_only_form_view"/>
         <field name="arch" type="xml">
                 <field name="detailed_type" position="after">
-                    <field name="tipo_producto_id"/>
+                    <field name="tipo_equipo_id"/>
+                    <field name="marca_id"/>
+                    <field name="modelo_id"/>
                 </field>
             </field>
         </record>
