--- a/administrador_de_reparaciones/views/views_product.xml
+++ b/administrador_de_reparaciones/views/views_product.xml
@@ -14,17 +14,16 @@
         </record>
 
         <record model="ir.ui.view" id="product_form_view">
-
-        <field name="name">product.form</field>
-        <field name="model">product.product</field>
-        <field name="inherit_id" ref="product.product_template_only_form_view"/>
-        <field name="arch" type="xml">
-                <field name="detailed_type" position="after">
-                    <field name="tipo_equipo_id"/>
-                    <field name="marca_id"/>
-                    <field name="modelo_id"/>
+            <field name="name">product.form</field>
+            <field name="model">product.product</field>
+            <field name="inherit_id" ref="product.product.product_normal_form_view"/>
+            <field name="arch" type="xml">
+                    <field name="detailed_type" position="after">
+                        <field name="tipo_equipo_id"/>
+                        <field name="marca_id"/>
+                        <field name="modelo_id"/>
+                    </field>
                 </field>
-            </field>
         </record>
   </data>
 </odoo>
