--- a/administrador_de_reparaciones/views/views_product.xml
+++ b/administrador_de_reparaciones/views/views_product.xml
@@ -16,9 +16,9 @@
         <record model="ir.ui.view" id="product_form_view">
             <field name="name">product.form</field>
             <field name="model">product.product</field>
-            <field name="inherit_id" ref="product.product_template_form_view"/>
+            <field name="inherit_id" ref="product.product_normal_form_view"/>
             <field name="arch" type="xml">
-                    <field name="detailed_type" position="after">
+                    <field name="barcode" position="after">
                         <field name="tipo_equipo_id"/>
                         <field name="marca_id"/>
                         <field name="modelo_id"/>
