--- a/administrador_de_reparaciones/views/views_menu_productos.xml
+++ b/administrador_de_reparaciones/views/views_menu_productos.xml
@@ -2,7 +2,7 @@
 <odoo>
     <data>
   
-        <menuitem id="menu_repair_products" name="Products" parent="repair.menu_repair_order" />
+        <menuitem id="menu_repair_products" name="Products" parent="menu_repair_order" />
         <menuitem id="menu_repair_product_menu_catalog" name="Products" parent="menu_repair_products" />
         <menuitem id="menu_repair_menu_product" name="Product Variants" parent="menu_repair_products" />
 
