--- a/administrador_de_reparaciones/views/views_menu_productos.xml
+++ b/administrador_de_reparaciones/views/views_menu_productos.xml
@@ -2,9 +2,11 @@
 <odoo>
     <data>
 
+        <menuitem id="menu_repair_product" name="Productos" parent="repair.menu_main" />
+
         <!--  Añade la opcion de Productos al menu de configuración en la aplicación de reparaciones-->
         <record id="action_repair_product_template" model="ir.actions.act_window">
-            <field name="name">repair_product_template</field>
+            <field name="name">Producto</field>
             <field name="res_model">product.template</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
@@ -13,12 +15,12 @@
             </field>
         </record>
 
-        <menuitem id="menu_product_template" name="producto" parent="repair.repair_menu_config" action="action_repair_product_template" sequence="10"/>
+        <menuitem id="menu_product_template" name="Productos" parent="repair.menu_repair_product" action="action_repair_product_template" sequence="10"/>
 
 
         <!--  Añade la opcion de Productos al menu de configuración en la aplicación de reparaciones-->
         <record id="action_repair_product_product" model="ir.actions.act_window">
-            <field name="name">repair_product_product</field>
+            <field name="name">Variante de productos</field>
             <field name="res_model">product.product</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
@@ -27,7 +29,7 @@
             </field>
         </record>
 
-        <menuitem id="menu_product_product" name="variante de producto" parent="repair.repair_menu_config" action="action_repair_product_product" sequence="11"/>
+        <menuitem id="menu_product_product" name="Variantes de producto" parent="repair.menu_repair_product" action="action_repair_product_product" sequence="11"/>
 
     </data>
 </odoo>
