--- a/administrador_de_reparaciones/views/views_product.xml
+++ b/administrador_de_reparaciones/views/views_product.xml
@@ -18,10 +18,12 @@
             <field name="model">product.product</field>
             <field name="inherit_id" ref="product.product_normal_form_view"/>
             <field name="arch" type="xml">
-                    <field name="barcode" position="after">
-                        <field name="tipo_equipo_id"/>
-                        <field name="marca_id"/>
-                        <field name="modelo_id"/>
+                    <field name="Sales" position="before">
+                        <page string="Reparaciones" name="repairs">
+                            <field name="tipo_equipo_id"/>
+                            <field name="marca_id"/>
+                            <field name="modelo_id"/>
+                        </page>
                     </field>
                 </field>
         </record>
