--- a/administrador_de_reparaciones/views/views_product.xml
+++ b/administrador_de_reparaciones/views/views_product.xml
@@ -1,31 +1,45 @@
 <odoo>
   <data>
             <record model="ir.ui.view" id="product_tree_view">
-            <field name="name">product.tree</field>
-            <field name="model">product.product</field>
+            <field name="name">product.template.tree</field>
+            <field name="model">product.template</field>
             <field name="inherit_id" ref="product.product_template_tree_view"/>
             <field name="arch" type="xml">
-                <field name="detailed_type" position="after">
+                <xpath expr="//page[@name='detailed_type']" position="before">
                     <field name="tipo_equipo_id"/>
                     <field name="marca_id"/>
                     <field name="modelo_id"/>
-                </field>
+                </xpath>
             </field>
         </record>
+
+               <record model="ir.ui.view" id="product_tree_view">
+            <field name="name">product.product.tree</field>
+            <field name="model">product.product</field>
+            <field name="inherit_id" ref="product.product_product_tree_view"/>
+            <field name="arch" type="xml">
+                <xpath expr="//page[@name='detailed_type']" position="before">
+                    <field name="tipo_equipo_id"/>
+                    <field name="marca_id"/>
+                    <field name="modelo_id"/>
+                </xpath>
+            </field>
+        </record>
+
 
         <record model="ir.ui.view" id="product_form_view">
             <field name="name">product.form</field>
             <field name="model">product.product</field>
             <field name="inherit_id" ref="product.product_template_form_view"/>
             <field name="arch" type="xml">
-                    <field name="Sales" position="before">
+                <xpath expr="//page[@name='Sales']" position="before">
                         <page string="Reparaciones" name="repairs">
                             <field name="tipo_equipo_id"/>
                             <field name="marca_id"/>
                             <field name="modelo_id"/>
                         </page>
-                    </field>
-                </field>
+                </xpath>
+            </field>
         </record>
   </data>
 </odoo>
