--- a/administrador_de_reparaciones/views/views_product.xml
+++ b/administrador_de_reparaciones/views/views_product.xml
@@ -1,6 +1,6 @@
 <odoo>
   <data>
-            <record model="ir.ui.view" id="product_tree_view">
+        <record model="ir.ui.view" id="repair_product_tree_view">
             <field name="name">product.template.tree</field>
             <field name="model">product.template</field>
             <field name="inherit_id" ref="product.product_template_tree_view"/>
@@ -13,7 +13,7 @@
             </field>
         </record>
 
-               <record model="ir.ui.view" id="product_tree_view">
+               <record model="ir.ui.view" id="repair_product_tree_view">
             <field name="name">product.product.tree</field>
             <field name="model">product.product</field>
             <field name="inherit_id" ref="product.product_product_tree_view"/>
@@ -27,7 +27,7 @@
         </record>
 
 
-        <record model="ir.ui.view" id="product_form_view">
+        <record model="ir.ui.view" id="repair_product_form_view">
             <field name="name">product.form</field>
             <field name="model">product.product</field>
             <field name="inherit_id" ref="product.product_template_form_view"/>
