--- a/administrador_de_reparaciones/views/views_product_product.xml
+++ b/administrador_de_reparaciones/views/views_product_product.xml
@@ -1,11 +1,11 @@
 <odoo>
   <data>
-               <record model="ir.ui.view" id="repair_product_tree_view">
+        <record model="ir.ui.view" id="repair_product_tree_view">
             <field name="name">product.product.tree</field>
             <field name="model">product.product</field>
             <field name="inherit_id" ref="product.product_product_tree_view"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='ist_price']" position="before">
+                <xpath expr="//field[@name='list_price']" position="before">
                     <field name="tipo_equipo_id"/>
                     <field name="marca_id"/>
                     <field name="modelo_id"/>
