--- a/administrador_de_reparaciones/views/views_product_product.xml
+++ b/administrador_de_reparaciones/views/views_product_product.xml
@@ -19,7 +19,7 @@
             <field name="model">product.product</field>
             <field name="inherit_id" ref="product.product_template_form_view"/>
             <field name="arch" type="xml">
-                <xpath expr="//page[@name='Sales']" position="before">
+                <xpath expr="//page[@name='sales']" position="before">
                         <page string="Reparaciones" name="repairs">
                             <field name="tipo_equipo_id"/>
                             <field name="marca_id"/>
