--- a/administrador_de_reparaciones/views/views_product_product.xml
+++ b/administrador_de_reparaciones/views/views_product_product.xml
@@ -1,11 +1,11 @@
 <odoo>
   <data>
         <record model="ir.ui.view" id="repair_product_tree_view">
-            <field name="name">product.product.tree</field>
+            <field name="name">repair.product.product.tree</field>
             <field name="model">product.product</field>
             <field name="inherit_id" ref="product.product_product_tree_view"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='name']" position="before">
+                <xpath expr="//field[@name='barcode']" position="after">
                     <field name="tipo_equipo_id"/>
                     <field name="marca_id"/>
                     <field name="modelo_id"/>
@@ -15,7 +15,7 @@
 
 
         <record model="ir.ui.view" id="repair_product_form_view">
-            <field name="name">product.form</field>
+            <field name="name">repair.product.product.form</field>
             <field name="model">product.product</field>
             <field name="inherit_id" ref="product.product_template_form_view"/>
             <field name="arch" type="xml">
