--- a/administrador_de_reparaciones/views/views_product_template.xml
+++ b/administrador_de_reparaciones/views/views_product_template.xml
@@ -12,5 +12,21 @@
                 </xpath>
             </field>
         </record>
+
+        <record model="ir.ui.view" id="repair_product_form_view">
+            <field name="name">repair.product.product.form</field>
+            <field name="model">product.product</field>
+            <field name="inherit_id" ref="product.product_template_form_view"/>
+            <field name="arch" type="xml">
+                <xpath expr="//notebook/page[@name='inventory']" position="before">
+                        <page string="Reparaciones" name="repairs">
+                            <field name="tipo_equipo_id"/>
+                            <field name="marca_id"/>
+                            <field name="modelo_id"/>
+                        </page>
+                </xpath>
+            </field>
+        </record>
+        
   </data>
 </odoo>
