--- a/administrador_de_reparaciones/views/views_product_template.xml
+++ b/administrador_de_reparaciones/views/views_product_template.xml
@@ -1,11 +1,11 @@
 <odoo>
   <data>
-        <record model="ir.ui.view" id="repair_product_tree_view">
-            <field name="name">product.template.tree</field>
+        <record model="ir.ui.view" id="repair_product_template_tree_view">
+            <field name="name">repair.product.template.tree</field>
             <field name="model">product.template</field>
             <field name="inherit_id" ref="product.product_template_tree_view"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='list_price']" position="before">
+                <xpath expr="//field[@name='barcode']" position="barcode">
                     <field name="tipo_equipo_id"/>
                     <field name="marca_id"/>
                     <field name="modelo_id"/>
@@ -13,9 +13,9 @@
             </field>
         </record>
 
-        <record model="ir.ui.view" id="repair_product_form_view">
+        <record model="ir.ui.view" id="repair_product_template_form_view">
             <field name="name">repair.product.product.form</field>
-            <field name="model">product.product</field>
+            <field name="model">product.template</field>
             <field name="inherit_id" ref="product.product_template_form_view"/>
             <field name="arch" type="xml">
                 <xpath expr="//notebook/page[@name='inventory']" position="before">
@@ -27,6 +27,6 @@
                 </xpath>
             </field>
         </record>
-        
+
   </data>
 </odoo>
