--- a/administrador_de_reparaciones/views/views_product_template.xml
+++ b/administrador_de_reparaciones/views/views_product_template.xml
@@ -5,7 +5,7 @@
             <field name="model">product.template</field>
             <field name="inherit_id" ref="product.product_template_tree_view"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='barcode']" position="barcode">
+                <xpath expr="//field[@name='barcode']" position="before">
                     <field name="tipo_equipo_id"/>
                     <field name="marca_id"/>
                     <field name="modelo_id"/>
