Mejorando reparaciones en el form de product.product

--- a/administrador_de_reparaciones/views/views_product_product.xml
+++ b/administrador_de_reparaciones/views/views_product_product.xml
@@ -18,7 +18,7 @@
             <field name="model">product.product</field>
             <field name="inherit_id" ref="product.product_template_form_view"/>
             <field name="arch" type="xml">
-                <xpath expr="//notebook/page[@name='inventory']" position="before">
+                <xpath expr="//notebook/page[@name='sales']" position="before">
                         <page string="Reparaciones" name="repairs">
                             <field name="tipo_equipo_id" string="Tipo de equipo"/>
                             <field name="marca_id" string="Marca de equipo"/>
