Mejorando reparaciones en el form de product.product

--- a/administrador_de_reparaciones/views/views_product_product.xml
+++ b/administrador_de_reparaciones/views/views_product_product.xml
@@ -20,9 +20,11 @@
             <field name="arch" type="xml">
                 <xpath expr="//notebook/page[@name='sales']" position="before">
                         <page string="Reparaciones" name="repairs">
-                            <field name="tipo_equipo_id" />
-                            <field name="marca_id" />
-                            <field name="modelo_id" />
+                            <group>
+                                <field name="tipo_equipo_id" string="Tipo de equipo"/>
+                                <field name="marca_id" string="Marca de equipo"/>
+                                <field name="modelo_id" string="Modelo de equipo"/>
+                            </group>
                         </page>
                 </xpath>
             </field>
