--- a/administrador_de_reparaciones/views/views_modelo.xml
+++ b/administrador_de_reparaciones/views/views_modelo.xml
@@ -7,6 +7,8 @@
         <field name="arch" type="xml">
             <tree string="Modelos">
                 <field name="nombre" />
+                <field name="marca_id" widget="many2one_select" />
+                <field name="marca_id.tipo_equipo_id" widget="many2one_select" />
             </tree>
         </field>
     </record>
@@ -17,10 +19,13 @@
         <field name="model">product.product.modelo</field>
         <field name="type">form</field>
         <field name="arch" type="xml">
-            <form string="Modelo">
-                <group>
-                    <field name="nombre" />
-                </group>
+            <form string="Modelo">   
+                <sheet>
+                    <group>
+                        <field name="nombre" />
+                        <field name="marca_id" widget="many2one_select" />
+                    </group>
+                </sheet>
             </form>
         </field>
     </record>
