Mejorando reparaciones en el form de product.product

--- a/administrador_de_reparaciones/views/views_modelo.xml
+++ b/administrador_de_reparaciones/views/views_modelo.xml
@@ -8,7 +8,7 @@
             <tree string="Modelos">
                 <field name="nombre" />
                 <field name="marca_id" widget="many2one_select" />
-                <field name="marca_id.tipo_equipo_id" widget="many2one_select" />
+                <!--<field name="marca_id.tipo_equipo_id" widget="many2one_select" />-->
             </tree>
         </field>
     </record>
