--- a/administrador_de_reparaciones/views/views_marca.xml
+++ b/administrador_de_reparaciones/views/views_marca.xml
@@ -22,7 +22,7 @@
                 <sheet>
                 <group>
                     <field name="nombre" />
-                        <field name="tipo_equipo_id" widget="many2one_select" />
+                        <field name="tipo_equipo_id" widget="many2one_select"  create="1"/>
                 </group>
                 </sheet>
             </form>
