--- a/administrador_de_reparaciones/views/views_product_template.xml
+++ b/administrador_de_reparaciones/views/views_product_template.xml
@@ -21,9 +21,9 @@
                 <xpath expr="//notebook/page[@name='sales']" position="before">
                         <page string="Reparaciones" name="repairs">
                             <group>
-                                <field name="tipo_equipo_id" string="Tipo de equipo"/>
-                                <field name="marca_id" string="Marca de equipo"/>
-                                <field name="modelo_id" string="Modelo de equipo"/>
+                                <field name="tipo_equipo_id" string="Tipo de equipo" create="1"/>
+                                <field name="marca_id" string="Marca de equipo" create="1"/>
+                                <field name="modelo_id" string="Modelo de equipo" create="1"/>
                             </group>
                         </page>
                 </xpath>
