--- a/administrador_de_reparaciones/views/views_modelo.xml
+++ b/administrador_de_reparaciones/views/views_modelo.xml
@@ -9,7 +9,7 @@
                 <!--<field name="marca_id.tipo_equipo_id" widget="many2one_select"  create="1" domain="[('marca_id', '=', marca_id)]"/>-->
                 <field name="marca_id" widget="many2one_select" />
                 <field name="nombre" />
-                <!--<field name="marca_id.tipo_equipo_id" widget="many2one_select" />-->
+                <field name="marca_id.tipo_equipo_id" widget="many2one_select" />
             </tree>
         </field>
     </record>
@@ -23,7 +23,7 @@
             <form string="Modelo">   
                 <sheet>
                     <group>
-                        <!--<field name="marca_id.tipo_equipo_id" widget="many2one_select"  create="1" domain="[('marca_id', '=', marca_id)]"/>-->
+                        <field name="marca_id.tipo_equipo_id" widget="many2one_select"  create="1" domain="[('marca_id', '=', marca_id)]"/>
                         <field name="marca_id" widget="many2one_select" />
                         <field name="nombre" />
                     </group>
