--- a/administrador_de_reparaciones/views/views_product_product.xml
+++ b/administrador_de_reparaciones/views/views_product_product.xml
@@ -7,7 +7,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='barcode']" position="after">
                     <field name="tipo_equipo_id" string="Tipo de equipo" create="1"/>
-                    <field name="marca_id" string="Marca de equipo" create="1" domain="[('tipo_equipo_id', '=', tipo_equipo_id)]"/>
+                    <field name="marca_id" string="Marca de equipo" create="1" domain="[('marca_id', '=', marca_id)]"/>
                     <field name="modelo_id" string="Modelo de equipo" create="1" domain="[('modelo_id', '=', modelo_id)]"/>
                 </xpath>
             </field>
@@ -22,7 +22,7 @@
                         <page string="Reparaciones" name="repairs">
                             <group>
                                 <field name="tipo_equipo_id" string="Tipo de equipo" create="1"/>
-                                <field name="marca_id" string="Marca de equipo" create="1" domain="[('tipo_equipo_id', '=', tipo_equipo_id)]"/>
+                                <field name="marca_id" string="Marca de equipo" create="1" domain="[('marca_id', '=', marca_id)]"/>
                                 <field name="modelo_id" string="Modelo de equipo" create="1" domain="[('modelo_id', '=', modelo_id)]"/>
                             </group>
                         </page>
