--- a/administrador_de_reparaciones/views/views_modelo.xml
+++ b/administrador_de_reparaciones/views/views_modelo.xml
@@ -7,7 +7,7 @@
         <field name="arch" type="xml">
             <tree string="Modelos">
                 <field name="tipo_equipo_id" widget="many2one_select"  create="1"/>
-                <field name="marca_id" widget="many2one_select"  domain="[('marca_id', '=', tipo_equipo_id.marca_id)]"/>
+                <field name="marca_id" widget="many2one_select"  domain="[('tipo_equipo_id.marca_id', '=', marca_id)]"/>
                 <field name="nombre" />
             </tree>
         </field>
@@ -23,7 +23,7 @@
                 <sheet>
                     <group>
                         <field name="tipo_equipo_id" widget="many2one_select"  create="1" />
-                        <field name="marca_id" widget="many2one_select" domain="[('marca_id', '=', tipo_equipo_id.marca_id)]" />
+                        <field name="marca_id" widget="many2one_select" domain="[('tipo_equipo_id.marca_id', '=', marca_id)]" />
                         <field name="nombre" />
                     </group>
                 </sheet>
