--- a/administrador_de_reparaciones/views/views_product_product.xml
+++ b/administrador_de_reparaciones/views/views_product_product.xml
@@ -6,9 +6,9 @@
             <field name="inherit_id" ref="product.product_product_tree_view"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='barcode']" position="after">
-                                <field name="tipo_equipo_id" string="Tipo de equipo" create="1"/>
-                                <field name="marca_id" string="Marca de equipo" create="1" domain="[('tipo_equipo_id', '=', tipo_equipo_id)]"/>
-                                <field name="modelo_id" string="Modelo de equipo" create="1" domain="[('marca_id', '=', marca_id)]"/>
+                                <field name="tipo_equipo_id" string="Tipo de equipo"/>
+                                <field name="marca_id" string="Marca de equipo"  domain="[('tipo_equipo_id', '=', tipo_equipo_id)]"/>
+                                <field name="modelo_id" string="Modelo de equipo"  domain="[('marca_id', '=', marca_id)]"/>
                 </xpath>
             </field>
         </record>
