agregando update=1 en los campos con  create=1

--- a/administrador_de_reparaciones/views/views_marca.xml
+++ b/administrador_de_reparaciones/views/views_marca.xml
@@ -21,7 +21,7 @@
             <form string="Marca">
                 <sheet>
                     <group>
-                        <field name="tipo_equipo_id" widget="many2one_select"  create="1"/>
+                        <field name="tipo_equipo_id" widget="many2one_select"  create="1" update="1"/>
                         <field name="nombre" />
                     </group>
                 </sheet>
