--- a/administrador_de_reparaciones/views/views_marca.xml
+++ b/administrador_de_reparaciones/views/views_marca.xml
@@ -6,7 +6,7 @@
         <field name="type">tree</field>
         <field name="arch" type="xml">
             <tree string="Marcas">
-                <field name="tipo_equipo_id" widget="many2one_select" />
+                <field name="tipo_equipo_id" widget="many2many_select" />
                 <field name="nombre" />
             </tree>
         </field>
@@ -21,7 +21,7 @@
             <form string="Marca">
                 <sheet>
                     <group>
-                        <field name="tipo_equipo_id" widget="many2one_select"  create="1" update="1"/>
+                        <field name="tipo_equipo_id" widget="many2many_select"  create="1" update="1"/>
                         <field name="nombre" />
                     </group>
                 </sheet>
