--- a/administrador_de_reparaciones/views/views_modelo.xml
+++ b/administrador_de_reparaciones/views/views_modelo.xml
@@ -6,8 +6,8 @@
         <field name="type">tree</field>
         <field name="arch" type="xml">
             <tree string="Modelos">
-                <field name="tipo_equipo_id" widget="many2one_select" />
-                <field name="marca_id" widget="many2one_select"  domain="[('tipo_equipo_id', '=', tipo_equipo_id)]"/>
+                <field name="tipo_equipo_id" widget="many2many_select" />
+                <field name="marca_id" widget="many2many_select"  domain="[('tipo_equipo_id', '=', tipo_equipo_id)]"/>
                 <field name="nombre" />
             </tree>
         </field>
@@ -22,8 +22,8 @@
             <form string="Modelo">   
                 <sheet>
                     <group>
-                        <field name="tipo_equipo_id" widget="many2one_select"  create="1"  update="1"/>
-                        <field name="marca_id" widget="many2one_select" domain="[('tipo_equipo_id', '=', tipo_equipo_id)]" />
+                        <field name="tipo_equipo_id" widget="many2many_select"  create="1"  update="1"/>
+                        <field name="marca_id" widget="many2many_select" domain="[('tipo_equipo_id', '=', tipo_equipo_id)]" />
                         <field name="nombre" />
                     </group>
                 </sheet>
